--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form id="hireform" action="http://az-growth-staging-1.codingninjas.com/api/v2/jobs/post_employer_details" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form id="hireform" action="https://api.codingninjas.in/api/v2/jobs/post_employer_details" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
             
                 <div class="col-md-12">
